tests/snapshots/run_wpt_conformance__litert_reshape__squeeze__float32_4D_tensor_by_eliminating_1st_and_4th_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float32 4D tensor by eliminating 1st and 4th dimensions",
    "litert",
    "PASS",
)
