tests/snapshots/run_wpt_conformance__litert_reshape__squeeze__float32_4D_tensor_by_eliminating_all_dimensions.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float32 4D tensor by eliminating all dimensions",
    "litert",
    "PASS",
)
