tests/snapshots/run_wpt_conformance__litert_reshape__squeeze__float32_5D_tensor_by_eliminating_four_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float32 5D tensor by eliminating four dimensions",
    "litert",
    "PASS",
)
